v3.6
corregido un error con el actualizador
v3.5
nuevos métodos para agregar mensajes en sus diferentes categorías para kick. moderadores, usuarios berificados y miembros o suscriptores.
posibilidad de desabilitar la interfaz invisible del programa.
v3.4
se ha agregado en modo beta la captura del chat de la plataforma de kick
corregidos errores con el editor de combinaciones de teclado.
v3.3
ahora se pueden capturar múltiples en vivos.
el reproductor es un reproductor global. cada ves que nos desplasemos a un en vivo anterior o al siguiente en vivo , detengamos el reproductor y lo volvamos a activar, reproducirá la URL de ese en vivo en el cual estamos posicionados.
se ha creado una pestaña de configuración del reproductor en los ajustes.
las estadísticas se reflejan para cada en vivo de manera individual
v3.2
se ha creado un nuevo reproductor que puede reproducir tanto los en vivos pasados como los en vivos en tiempo real. para mas información mirar readme.
se ha creado un nuevo servicio que nos permite disfrutar nuestro en vivo de youtube en tiempo real con reproducción de audio.
se pueden extraer nombres de usuario de tiktok con las urls que contienen vm.tiktok.
v3.1
un bug el cual no iniciaba el chat de tiktok ha sido corregido.
v3.0
se ha creado un actualizador de idiomas.
removido guardar historial.
bugs con la plataforma tiktok han sido corregidos.
mejorada la interfaz. los buffers son visibles y remodularisado el programa.
Ahora podemos establecer un dispositivo de audio para los sonidos y los mensajes de lectura. Hay que tener en cuenta que, en los mensajes de lectura, el cambio solo se aplicará en el motor piperTTS.
Podremos capturar el chat de una plataforma solo con el usuario de la persona. por ejemplo, si escribimos 4everzyanya, damos tab, elejimos tiktok y al dar enter nos llevará al en vivo de tiktok de la persona.
El editor de cominaciones se podrá acceder antes del chat como durante el chat.
v2.9
corregido el bug de no poder agregar canales: