@@ -119,5 +119,5 @@ cesar.verastegui17@gmail.com
 With your support, you can help this program continue to grow.
 
 [Want to donate to VeTube?](https://www.paypal.com/donate/?hosted_button_id=5ZV23UDDJ4C5U)
-[Download the 64-bit version of the program here](https://github.com/metalalchemist/VeTube/releases/download/v3.6/VeTube-x64.zip)
-[Download the 32-bit version of the program here](https://github.com/metalalchemist/VeTube/releases/download/v3.6/VeTube-x86.zip)
+[Download the 64-bit version of the program here](https://github.com/metalalchemist/VeTube/releases/download/v3.7/VeTube-x64.zip)
+[Download the 32-bit version of the program here](https://github.com/metalalchemist/VeTube/releases/download/v3.7/VeTube-x86.zip)
