@@ -129,5 +129,5 @@ Con tu apoyo contribuyes a que este programa siga en crecimiento.
 
 [¿Te unes a nuestra causa?](https://www.paypal.com/donate/?hosted_button_id=5ZV23UDDJ4C5U)
 
-[descarga el programa para 64 bits](https://github.com/metalalchemist/VeTube/releases/download/v3.6/VeTube-x64.zip)
-[descarga el programa para 32 bits](https://github.com/metalalchemist/VeTube/releases/download/v3.6/VeTube-x86.zip)
+[descarga el programa para 64 bits](https://github.com/metalalchemist/VeTube/releases/download/v3.7/VeTube-x64.zip)
+[descarga el programa para 32 bits](https://github.com/metalalchemist/VeTube/releases/download/v3.7/VeTube-x86.zip)
