@@ -2,7 +2,7 @@ sounddevice
 TikTokLive
 git+https://github.com/iamoverit/kick.py
 pyperclip
-git+https://github.com/metalalchemist/chat-downloader
+git+https://github.com/owsombra/chat-downloader
 git+https://github.com/metalalchemist/google-currency
 git+https://github.com/accessibleapps/sound_lib
 git+https://github.com/accessibleapps/accessible_output2
