@@ -1,8 +1,8 @@
 {
-    "current_version": "3.6",
-    "description": "corregido actualizador",
+    "current_version": "3.7",
+    "description": "corregido chat downloader",
     "downloads": {
-        "Windows32": "https://github.com/metalalchemist/VeTube/releases/download/v3.6/VeTube-x86.zip",
-        "Windows64": "https://github.com/metalalchemist/VeTube/releases/download/v3.6/VeTube-x64.zip"
+        "Windows32": "https://github.com/metalalchemist/VeTube/releases/download/v3.7/VeTube-x86.zip",
+        "Windows64": "https://github.com/metalalchemist/VeTube/releases/download/v3.7/VeTube-x64.zip"
     }
 }
