@@ -1,3 +1,5 @@
+* se corrige chat downloader para que sea compatible  con twich
+* protobuf se actualiza a la última versión por fallo de seguridad (CVE 0994)
 v3.6
 corregido un error con el actualizador
 v3.5
